Added basic functionality to chatclient, chatroom, and chatserver
ChatRoom can be launched and works, though the server must be running
first or it returns an error.  This is noted and will be fixed.

--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,33 @@
 /bin/
 /bin/
 /bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
